toolify

PR/54182: Cross-building on Linux fails in rb.c